--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ server:
 # spring.datasource.username = username ... etc
 spring:
   datasource:
-    url: jdbc:postgresql://database-1.ces41klochst.us-east-2.rds.amazonaws.com:5432/bookdb
+    url: jdbc:postgresql://database-1.ces41klochst.us-east-2.rds.amazonaws.com :5432/bookdb
     username: bookuser
     password: Passw0rd
     driver-class-name: org.postgresql.Driver
@@ -13,6 +13,6 @@ spring:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     show-sql: false
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
       
     
