added methods to handle image in s3

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,4 +1,18 @@
-
+cloud:
+  aws:
+    credentials:
+      access-key: AKIAZUDPR6KH3GXIHWQG
+      secret-key: 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
+    region:
+      static: us-east-2
+    stack:
+      auto: false
+      
+application:
+  bucket:
+    name: bookimagesbucket
+      
+      
 server: 
   port: 9020
 # if this was a .properties spring.datasource.url = your url
@@ -13,4 +27,4 @@ spring:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     show-sql: false
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
