--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -19,7 +19,7 @@ server:
 # spring.datasource.username = username ... etc
 spring:
   datasource:
-    url: jdbc:postgresql://reva.c7cch2klrsmh.us-east-2.rds.amazonaws.com:5432/bookdb
+    url: jdbc:postgresql://database-1.ces41klochst.us-east-2.rds.amazonaws.com:5432/bookdb
     username: bookuser
     password: Passw0rd
     driver-class-name: org.postgresql.Driver
